--- a/Scales Timer/Base.lproj/Main.storyboard
+++ b/Scales Timer/Base.lproj/Main.storyboard
@@ -43,10 +43,17 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qJs-re-LlG" userLabel="Break Container">
                                 <rect key="frame" x="0.0" y="393" width="414" height="294"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QJv-w1-IY5">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="294"/>
+                                        <color key="backgroundColor" red="0.69803921568627447" green="0.23921568627450979" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="triggerBreakButtonPressed:" destination="9o0-jA-z4L" eventType="touchUpInside" id="S5P-Zh-G4u"/>
+                                        </connections>
+                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GF9-qi-sBm" userLabel="Break Time Label">
-                                        <rect key="frame" x="132" y="118.66666666666669" width="150" height="57.333333333333314"/>
+                                        <rect key="frame" x="107" y="118.66666666666669" width="200" height="57.333333333333314"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="150" id="1HY-V9-Adu"/>
+                                            <constraint firstAttribute="width" constant="200" id="1HY-V9-Adu"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="48"/>
                                         <nil key="textColor"/>
@@ -62,11 +69,14 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.99849599600000005" green="0.2367233795" blue="0.27335151330000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="QJv-w1-IY5" firstAttribute="top" secondItem="qJs-re-LlG" secondAttribute="top" id="5y8-EZ-iWy"/>
                                     <constraint firstItem="bAs-jy-WLd" firstAttribute="centerX" secondItem="qJs-re-LlG" secondAttribute="centerX" id="GPg-wx-zsY"/>
                                     <constraint firstItem="bAs-jy-WLd" firstAttribute="top" secondItem="GF9-qi-sBm" secondAttribute="bottom" id="N7F-9k-vRG"/>
+                                    <constraint firstAttribute="bottom" secondItem="QJv-w1-IY5" secondAttribute="bottom" id="Rtj-BR-Y55"/>
                                     <constraint firstItem="GF9-qi-sBm" firstAttribute="centerX" secondItem="qJs-re-LlG" secondAttribute="centerX" id="Sfe-y6-ofU"/>
+                                    <constraint firstItem="QJv-w1-IY5" firstAttribute="leading" secondItem="qJs-re-LlG" secondAttribute="leading" id="aTh-ej-GsK"/>
+                                    <constraint firstAttribute="trailing" secondItem="QJv-w1-IY5" secondAttribute="trailing" id="hMr-4D-hhK"/>
                                     <constraint firstItem="GF9-qi-sBm" firstAttribute="centerY" secondItem="qJs-re-LlG" secondAttribute="centerY" id="m0A-3K-Xwp"/>
                                 </constraints>
                             </view>
@@ -118,6 +128,13 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pdn-Ek-az0" userLabel="Work Container">
                                 <rect key="frame" x="0.0" y="20" width="414" height="323.66666666666669"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Pz-Le-ZEg">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="323.66666666666669"/>
+                                        <color key="backgroundColor" red="0.20000000000000001" green="0.59999999999999998" blue="1" alpha="1" colorSpace="deviceRGB"/>
+                                        <connections>
+                                            <action selector="triggerWorkButtonPressed:" destination="9o0-jA-z4L" eventType="touchUpInside" id="P5O-XN-ubW"/>
+                                        </connections>
+                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Work" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0w-KC-HtF">
                                         <rect key="frame" x="182" y="190.66666666666666" width="50" height="21"/>
                                         <constraints>
@@ -128,19 +145,22 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8N-zJ-pTF" userLabel="Work Time Label">
-                                        <rect key="frame" x="132" y="132" width="150" height="58"/>
+                                        <rect key="frame" x="107" y="132" width="200" height="58"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="150" id="Oac-Jd-uFo"/>
+                                            <constraint firstAttribute="width" constant="200" id="Oac-Jd-uFo"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="48"/>
                                         <color key="textColor" red="0.99551290831759676" green="1" blue="0.98356858510430711" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.20000000000000001" green="0.59999999999999998" blue="1" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
                                     <constraint firstItem="d0w-KC-HtF" firstAttribute="centerX" secondItem="Pdn-Ek-az0" secondAttribute="centerX" id="1aS-kL-Xac"/>
                                     <constraint firstItem="d0w-KC-HtF" firstAttribute="top" secondItem="h8N-zJ-pTF" secondAttribute="bottom" id="3Ct-wM-Rur"/>
+                                    <constraint firstItem="7Pz-Le-ZEg" firstAttribute="leading" secondItem="Pdn-Ek-az0" secondAttribute="leading" id="8Nm-34-px8"/>
+                                    <constraint firstAttribute="bottom" secondItem="7Pz-Le-ZEg" secondAttribute="bottom" id="TtG-OH-Wtg"/>
+                                    <constraint firstAttribute="trailing" secondItem="7Pz-Le-ZEg" secondAttribute="trailing" id="Vhr-jT-EEh"/>
+                                    <constraint firstItem="7Pz-Le-ZEg" firstAttribute="top" secondItem="Pdn-Ek-az0" secondAttribute="top" id="n0c-8J-lt4"/>
                                     <constraint firstItem="h8N-zJ-pTF" firstAttribute="centerY" secondItem="Pdn-Ek-az0" secondAttribute="centerY" constant="-0.83333333333334281" id="pdO-il-GKB"/>
                                     <constraint firstItem="h8N-zJ-pTF" firstAttribute="centerX" secondItem="Pdn-Ek-az0" secondAttribute="centerX" id="yVi-qJ-Gx4"/>
                                 </constraints>
@@ -166,9 +186,10 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Timer" id="s6Q-mx-Hjp"/>
                     <connections>
+                        <outlet property="breakButtonBackground" destination="QJv-w1-IY5" id="yiw-jk-ljM"/>
                         <outlet property="breakTimeLabel" destination="GF9-qi-sBm" id="aJs-tl-HsR"/>
-                        <outlet property="minutesLabel" destination="GF9-qi-sBm" id="jeu-0s-Ulj"/>
                         <outlet property="pauseResumeButton" destination="kMX-ph-M3y" id="fqP-n4-xgs"/>
+                        <outlet property="workButtonBackground" destination="7Pz-Le-ZEg" id="g9i-eX-T80"/>
                         <outlet property="workTimeLabel" destination="h8N-zJ-pTF" id="2xt-2Q-yAB"/>
                     </connections>
                 </viewController>
